# Hands-On-Design-Patterns-with-CPP-Second-Edition

./: .gitignore  README.md
Chapter01/: 01_cast.C  02_dynamic_cast.C  CMakeLists.txt  readme.md
Chapter02/: 01_func_template.C  01a_func_auto.C  02_class_template.C  03_variable_template.C  04_nontype.C  05a_consteval.C  05b_consteval.C  05c_consteval.C  05d_consteval.C  06a_template_template.C  06b_template_template.C  06c_template_template.C  07_whatami.C  08a_variadic_function.C  08b_variadic_function.C  09_variadic_class.C  10_variadic_auto.C  11_lambda.C  12a_lambda_overload14.C  12b_lambda_overload17.C  12c_lambda_overload17.C  13a_constraints.C  13b_constraints.C  13c_constraints.C  14a_concept.C  14b_concept.C  15_concept.C  CMakeLists.txt
Chapter03/: 01_non_ownership.C  02_non_ownership.C  03_unique_ptr.C  04_factory.C  05_move.C  06_shared.C  07_string_builder.C  08_string_factory.C  09_string_view.C  10_span.C  11_ranges.C  CMakeLists.txt
Chapter04/: 02a_std_swap_copyable.C  02b_std_swap_noncopyable.C  02c_std_swap_movable.C  02d_std_swap_nonmovable.C  03a_swap_rollback.C  03b_swap_rollback.C  04_vector_empty.C  05_change_object.C  06a_member_swap.C  06b_member_swap_pimpl.C  08_nonmember_swap_std.C  09_nonmember_swap_std_only.C  CMakeLists.txt
Chapter05/: 01_benchmark.C  02_test.C  03_object_count.C  05_raii.C  06_scoped_ptr.C  07_scoped_ptr_bm.C  08_mutex_guard.C  09_co_resouce.C  09_co_resouce_explore.C  09_co_resouce_explore1.C  09a_co_resouce.C  10_co_resource_lambda.C  CMakeLists.txt
Chapter06/: 01_unique_ptr.C  02_unique_ptr.C  03_shared_ptr.C  04_std_function.C  05_dependencies.C  06_c_sort.C  07_smartptr.C  07_smartptr.h  07_smartptr_ext.C  08_any.C  09_function.C  CMakeLists.txt  readme.md
Chapter07/: 02_overload.C  03_overload.C  05_template_overload.C  07_deduction.C  08_default_args.C  09_substitution.C  14_error.C  15a_class_template.C  15b_class_template.C  16_sfinae_natural.C  17_substitution_error.C  18_sfinae_artificial.C  19_constraints.C  20_require_expression.C  20a_require_expression.C  21_concepts.C  22_trait_has_value_type.C  22a_trait_has_value_type.C  23_trait_is_class.C  24_pseudo_concepts.C  24a_pseudo_concepts.C  25_pseudo_concepts.C  CMakeLists.txt
Chapter08/: 01a_nested_types.C  02_bad_crtp.C  03_good_crtp.C  04_operator_plus.C  05_operator_plus.C  06_compare.C  06a_compare_cpp20.C  07_operator_plus_concepts.C  08_registry.C  09_visitor.C  10_policies.C  11_template_policies.C  CMakeLists.txt
Chapter09/: 01_city.C  02_cout_chaining.C  03_city_named_args.C  04_named_args.C  05_hier_chain.C  06a_poly_chain.C  06b_poly_chain.C  07_crtp_chain.C  08_builder_vector.C  09_builder_employee.C  10_builder.html  10_builder_html.C  11_builder_html.C  12_builder_html_cpp20.C  CMakeLists.txt
Chapter10/: 03_malloc_free_mt.C  04_small_string.C  05_small_string.C  07_small_vector.C  08_small_queue.C  09_smartptr.C  10_local_buffer.C  11_local_buffer_vtable.C  CMakeLists.txt
Chapter11/: 02_trycatch.C  02a_trycatch_cleanup.C  02b_trycatch_raiicleanup.C  03_raii.C  04_scopeguard_basic.C  04a_scopeguard_basic_typedef.C  05_scopeguard_basic_move.C  05a_scopeguard_basic_move_cpp14.C  06_scopeguard_obj.C  07_scopeguard_lambda.C  07a_scopeguard_lambda_cleanup.C  07b_scopeguard_lambda_cpp17.C  08_scopeguard_on_exit.C  08a_scopeguard_on_exit_named.C  09_scopeguard_exception.C  09a_scopeguard_shielded.C  10_scopeguard_on_fail.C  10a_scopeguard_on_fail_cpp17.C  10b_scopeguard_on_fail_gcc.C  10c_scopeguard_on_fail_cpp17_nomacro.C  11_scopeguard_te_benchmark.C  CMakeLists.txt
Chapter12/: 01_no_access.C  02_friend.C  03_member_plus.C  04_friend_plus.C  05_friend_plus.C  06_stream_friend.C  07_stream_friend.C  08_friend_forward.C  09_friend_forward.C  10_friend_scope.C  11_friend_scope.C  12_friend_scope.C  13_operator_new.C  14_operator_new.C  15_friend_template.C  16_friend_template.C  17_friend_factory.C  18_friend_factory_ns.C  19_crtp_equal_factory.C  20_crtp_plus_factory.C  CMakeLists.txt
Chapter13/: 01_construction_hierarchy.C  02_construction_hierarchy.C  03_construction_hierarchy.C  04_virtual_type.C  05_factory.C  06_factory_unique.C  07_factory_method.C  08_non_factory_ctor.C  09_factory_args.C  10_factory_args.C  11_spec_args.C  12_type_registry.C  13_type_registry.C  14_type_registry_args.C  15_unit_factory.C  16_poly_copy.C  17_poly_copy_unique.C  18_poly_copy_unique_crtp.C  19_poly_copy_unique_crtp.C  20_poly_copy_crtp.C  21_factory_builder  21_factory_builder.C  CMakeLists.txt
Chapter14/: 01_template_method.C  02_polymorphism.C  03_template_method.C  04_pre_post_conditions.C  05_pre_post_conditions_error.C  06_pre_post_actions.C  07_private_virtual.C  08_nvi_template_method.C  09_nvi_re_post_actions.C  10_nvi_protected.C  11_template_vs_strategy.C  12_virtual_destructors.C  13_fragile_base.C  14_fragile_base_bug.C  15_template_customization.C  CMakeLists.txt
Chapter15/: 01_scoped_ptr.C  02_scoped_ptr_deletion_policy.C  03_deletion_policy_concepts.C  04_deletion_policy_assert.C  05_policy_bug.C  06_policy_move.C  07_template_operator.C  08_template_template.C  09_template_template_variadic.C  10_policy_base.C  11_release_policy.C  12_debug_policy.C  13_move_policy.C  14_shared_ptr.C  15_shared_ptr.C  16_shared_ptr_debug.C  17_adapter_using.C  18_adapter_inheritance.C  19_release_policy_concepts.C  20_release_policy_sfinae.C  21_move_policy_concepts.C  22_move_policy_sfinae.C  23_conversions_concepts.C  24_conversions_concepts.C  25_conversions_sfinae_NOT.C  26_conversions_crtp.C  27_rebind.C  CMakeLists.txt
Chapter16/: 02_decorator.C  03_decorator.C  04_decorator.C  05_debug_decorator.C  06_debug_decorator.C  07_universal_decorator.C  08_universal_decorator_cpp17.C  08a_universal_decorator.C  09_universal_decorator.C  10_universal_decorator.C  12_locking_queue.C  13_adapter_curry.C  14_adapter_curry.C  15_adapter_lambda.C  15a_adapter_lambda.C  16_adapter_lambda.C  17_adapter_bind.C  18_time_adapter.C  19_time_adapter.C  20_template_template_adapter.C  21_template_template_adapter.C  22_template_template_adapter.C  26_value_policy.C  (+4 more)
(+55 files in other folders)
